# instaffo

./: .replit  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  schemas.py
application/: __init__.py  dto.py  services.py
attached_assets/: Pasted-Instaffo-is-a-recruiting-platform-that-makes-money-by-bringing-together-hiring-companies-and-talents-1740335830425.txt
domain/: __init__.py  models.py  repositories.py  services.py  value_objects.py
infrastructure/: __init__.py  elasticsearch_client.py  elasticsearch_service.py  mappers.py  repositories.py  service_factory.py
interface/: __init__.py  controllers.py  schemas.py
routes/: __init__.py  document_routes.py  health_routes.py  matching_routes.py
services/: elasticsearch_service.py
tests/: conftest.py  test_application.py  test_basic.py  test_domain.py  test_elasticsearch_service.py  test_infrastructure.py  test_routes.py
