[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.17.1",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "marshmallow>=3.26.1",
    "psycopg2-binary>=2.9.10",
    "routes>=2.5.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
